--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,32 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
     <title>iview example</title>
-    <!--<link rel="stylesheet" type="text/css" href="../iview/iview.css"/>-->
-    <!--<script type="text/javascript" src="../iview/vue.js"></script>-->
-    <!--<script type="text/javascript" src="../iview/iview.js"></script>-->
-    <link rel="stylesheet" type="text/css" href="http://unpkg.com/iview/dist/styles/iview.css"/>
-    <script type="text/javascript" src="http://vuejs.org/js/vue.min.js"></script>
-    <script type="text/javascript" src="http://unpkg.com/iview/dist/iview.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/iview/iview.css"/>
+    <script type="text/javascript" src="/iview/vue.js"></script>
+    <script type="text/javascript" src="/iview/iview.js"></script>
 </head>
-<body>
-<div id="app">
-    <i-button @click="show">Click me!</i-button>
-    <Modal v-model="visible" title="Welcome">Welcome to iView</Modal>
-</div>
-<script>
-    new Vue({
-        el: '#app',
-        data: {
-            visible: false
-        },
-        methods: {
-            show: function () {
-                this.visible = true;
-            }
-        }
-    })
-</script>
-</body>
+<!--body不加,整个vue.js竟然无法使用-->
+    <body>
+        <div id="app">
+            <input v-model="message">
+            <span v-bind:title="tipMsg">{{ message }}</span>
+            <i-button @click="reverseMessage">逆转消息</i-button>
+        </div>
+        <div id="computed">
+            <p>全名:{{fullName}}</p>
+            <p>姓:{{firstName}}</p>
+            <p>名:{{lastName}}</p>
+            <input v-model="fullName"/>
+        </div>
+        <script>
+            var app = new Vue({
+                el: '#app',
+                data: {
+                    message: 'Hello Vue.js!',
+                    tipMsg:'页面加载于 ' + new Date().toLocaleString()
+                },
+                methods: {
+                    reverseMessage: function () {
+                        this.message = this.message.split('').reverse().join('')
+                    }
+                }
+            });
+
+            var app2 = new Vue({
+                el:'#computed',
+                data:{
+                    firstName:'tang',
+                    lastName:'xi',
+                },
+                computed:{
+                    fullName:{
+                        get:function(){
+                            return this.firstName + " " + this.lastName;
+                        },
+                        set:function(fullName){
+                            var names = fullName.split(' ');
+                            this.firstName = names[0];
+                            this.lastName = names[names.length - 1];
+                        }
+                    }
+                }
+            });
+        </script>
+    </body>
 </html>
